package S185220001.Task3;

import S185220001.Task3.Line.Position;

public interface Linable {

    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();

}
